# HaskellSamples

./: .gitignore  README.md  hello.cabal
packageSample/: .gitignore  LICENSE  cabal.sandbox.config  packageSample.cabal
sample/: .gitignore  cabal.sandbox.config  sample.cabal
sample/src/: Fruit.hs  ListSample.hs  Main.hs  MaybeSample.hs
src/: CalculatorSample.hs  Converter.hs  Hello.hs  ListSample.hs  Main.hs  ShapeUtil.hs
src/studies/: Triangle.hs
src/util/: FileUtil.hs
