-- hello.cabal

name: hello
version: 0.0
build-type: Simple
cabal-version: >=1.8

executable hello
  main-is: Hello.hs
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends: base, hspec >= 1.3, QuickCheck >= 2.6
