name: hello
version: 0.0
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved
license-file: ""
data-dir: ""

executable hello
    build-depends: base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src src/util
    other-modules: FileUtil Converter CalculatorSample Hello
    ghc-options: -Wall

test-suite spec
    build-depends: base -any, hspec >=1.3, QuickCheck >=2.6
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    hs-source-dirs: test
    ghc-options: -Wall
